	PR c++/35828 	* pt.c (tsubst_decl): Don't abort if we didn't change anything 	in a TEMPLATE_DECL's args.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149351 138bc75d-0d04-0410-961f-82ee72b054a4